**Added**
*Updated*
~~Fixed or Removed~~
[2017050800]
~~yizhibo bug~~
~~huajiao bug~~

[2017042800]
~~downloader bugs~~

[2017042600]
~~douyu bug~~

[2017042200]
~~longzhu bug~~

[2017042100]
~~download bugs~~

[2017041900]
*downloader*

[2017041601]
~~afreeca bug~~
~~bilibili bug~~

[2017041600]
**web proxy support**

**log system**
*WebUI*

[2017041400]
~~bugs~~

[2017041301]
*WebUI*

[2017041300]
~~bugs~~

[2017041200]
~~bugs~~

[2017040500]
*auto update*
*WebUI*
~~bugs~~

[2017040300]
**auto update**
*WebUI*
~~bugs~~

[2017040100]
**hta for windows**
*WebUI*

[2017033102]
*WebUI*
~~bugs~~

[2017033101]
~~douyu bugs~~

[2017033100]
*WebUI & core*
~~panda bug~~

[2017033001]
**cmd args**
*WebUI*

[2017033000]
*core*
*WebUI*

[2017032900]
*WebUI*

[2017032801]
~~bugs~~

[2017032800]
**afreeca support(need ffmpeg)**
*WebUI*

[2017032701]
**inke support(need ffmpeg)**

[2017032700]
*WebUI & Console*

[2017032600]
**add tasks support**
*WebUI & Console*

[2017032500]
**chushou support**
*WebUI*
~~quanmin bugs~~

[2017032402]
**qiedianjing support**

[2017032401]
**version check**
**https support**
*WebUI*
~~huajiao bugs~~