@@ -4,7 +4,7 @@
 		"FileVersion": {
 			"Major": 2017,
 			"Minor": 5,
-			"Patch": 8,
+			"Patch": 9,
 			"Build": 0
 		},
 		"ProductVersion": {
