@@ -1,6 +1,10 @@
 **Added**
 *Updated*
 ~~Fixed or Removed~~
+[2017050900]
+~~yizhibo bug~~
+~~huajiao bug~~
+
 [2017050800]
 ~~yizhibo bug~~
 ~~huajiao bug~~
